@@ -1,2 +1,2 @@
 # Set of available languages.
-de ar es ru
+de ar es pt ru
