@@ -1,3 +1,7 @@
+2010-07-21  Werner Koch  <wk@g10code.com>
+
+	* main.cc (DllMain): Add explicit init and deinit of libgpg-error.
+
 2010-04-20  Marcus Brinkmann  <marcus@g10code.de>
 
 	* client.cc (getinfo_pid_cb): Return gpg_error_t.
