@@ -1,3 +1,12 @@
+2010-07-21  Marco A.G.Pinto  <marcoagpinto@mail.telepac.pt>  (wk)
+
+	* po/pt.po: New.
+	* po/LINGUAS: Add pt.
+
+2010-07-21  Werner Koch  <wk@g10code.com>
+
+	* configure.ac: Require libgpg-error 1.9.
+
 2010-04-21  Marcus Brinkmann  <marcus@g10code.de>
 
 	Release 0.9.6.
